# axum-totp

./: .gitignore  Cargo.toml  README.md  curlcmds
.github/workflows/: rust.yml
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: client.js
frontend/src/components/: AppLogin.vue  TheWelcome.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js
migrations/: 001_initial.sql
src/: acl.rs  db.rs  lib.rs  main.rs  models.rs  response.rs  services.rs
tests/: integration_tests.rs
